# IntroToAI

./: .gitignore  README.md
.continue/: config.yaml
.devcontainer/: devcontainer.json  setup-ide-tutor.sh
.github/: CLASSROOM_SETUP.md  GOOGLE_CLASSROOM_SETUP.md  INSTITUTE_OPENROUTER_KEYS.md  REPOS.md
assignments/: README.md
assignments/01-getting-started/: README.md
aurnova-agent-template/: .env.example  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
aurnova-agent-template/.devcontainer/: Dockerfile  devcontainer.json
aurnova-agent-template/.github/workflows/: ci.yml
aurnova-agent-template/agent/: __init__.py  config.py  main.py  runtime.py  server.py
aurnova-agent-template/eval/: __init__.py  harness.py
aurnova-agent-template/eval/scenarios/: smoke.json
aurnova-agent-template/llm/: __init__.py  models.py  openrouter_client.py
aurnova-agent-template/memory/: __init__.py  rag.py  store.py
aurnova-agent-template/orchestrator/: __init__.py  executor.py  guardrails.py  planner.py
aurnova-agent-template/scripts/: check_env.py
aurnova-agent-template/tests/: test_smoke.py
aurnova-agent-template/tools/: __init__.py  base.py  registry.py
aurnova-agent-template/tools/builtin/: __init__.py  time_tool.py  web_tool_stub.py
docs/: BASE_AGENT_DESIGN.md  COURSE_SKELETON.md  DESIGN_DOCUMENT_HEADER.md  PROPOSAL_HEADER.md  README.md  _config.yml  index.md  readings.md  syllabus.md
msai-course-INTRO/: syllabus.md
scripts/: create-student-keys.js  package.json  students.csv.example
tutor-ai-panel/: package-lock.json
(+11 files in other folders)
